  * Put "3.0 (quilt)" in the default list of formats tried by dpkg-source
    after "1.0" and before "3.0 (native)".
  * Let dpkg-source fail if several upstream orig.tar files are available
    (using different compression scheme) since we don't know which one
    to use.
  * Add missing "use Dpkg::Gettext" in Dpkg::Changelog::Entry::Debian.
    Closes: #557668

  [ Guillem Jover ]
  * Verify that the alternative used in update-alternatives --set has been
    registered instead of failing with an undefined value in the slave
    method. Closes: #554136
  * Strip leading spaces in the first line of a field's value in
    Dpkg::Control::Hash. Closes: #557547

 -- Raphael Hertzog <hertzog@debian.org>  Sat, 21 Nov 2009 14:57:50 +0100

dpkg (1.15.5.2) unstable; urgency=low

  * Change Dpkg::Version API to accept invalid versions by default and add
    is_valid() method. The boolean evaluation of a version object returns
    true if the version is valid, false otherwise.
  * Update dpkg-shlibdeps to always use Dpkg::Version now that it can
    contain the empty version string. Closes: #556786
  * Keep compatibility with perl 5.8 by avoiding the _ prototype.

 -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Nov 2009 11:54:50 +0100

dpkg (1.15.5.1) unstable; urgency=low

  * Fix build failures due to off_t type missmatch caused by not including
    <config.h> first on the unit tests. Suggested by Pierre Habouzit and
    Julien Cristau, thanks!

 -- Guillem Jover <guillem@debian.org>  Tue, 17 Nov 2009 16:42:00 +0100

dpkg (1.15.5) unstable; urgency=low

  [ Guillem Jover ]
  * Remove obsolete conffiles on purge. Closes: #421367, #453005, #454628
  * Update list of binaries dpkg checks on the PATH.
    - Remove install-info, now a wrapper that will disappear soonish.
    - Add programs used by dpkg itself: sh, rm, find, tar and dpkg-deb.
  * Check and warn on duplicate conffiles in dpkg-deb. Closes: #131633