@@ -10,6 +10,9 @@ dpkg (1.15.5.3) UNRELEASED; urgency=low
     to use.
   * Add missing "use Dpkg::Gettext" in Dpkg::Changelog::Entry::Debian.
     Closes: #557668
+  * When building "3.0 (quilt)" source packages, use QUILT_PATCH_OPTS="-t -F 0
+    -N -u -V never -g0" so that quilt is as strict as dpkg-source's internal
+    implementation of quilt. Closes: #557664
 
   [ Guillem Jover ]
   * Verify that the alternative used in update-alternatives --set has been
